--- a/gatos-e-cafes--main/gatos-e-cafes--main/gatos-e-cafes--main/intex.html
+++ b/gatos-e-cafes--main/gatos-e-cafes--main/gatos-e-cafes--main/intex.html
@@ -21,8 +21,9 @@
     <p class="cafes-texto-um">Inserir o primeiro parágrafo</p>
     <p class="cafes-texto-dois">Inserir o segundo parágrafo</p>
     </div>
-<img class=src="vai ter uma imagem ">
-</section>
+<img src="cafes.jpeg" alt=""><img src="portrait-two-identical-siamese-cats_158595-5728.webp" alt="">
+</section section class="gatos">
+<h2 class="gatos-titulo">quais sao nossos gatos </h2>
     
 </body>
 </html>
