--- a/intex.html
+++ b/intex.html
@@ -5,16 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header class="cabecalho">
         <h1 class="cabecalho-tema">gatos e cafes</h1>
         <ul class="cabecalho-lista">
-            <li class="cabecalho-item">estudante</li>
-            <li class="cabecalho-item">escola</li>
+            <li class="cabecalho-item">cafes</li>
+            <li class="cabecalho-item">gatos</li>
         </ul>   
     </header>
-
+    <section class="cafes">
+    <div class="cafes-conteudo">
+    <h2 class="cafes-titulo" >sobre a cafes</h2>
+    <p class="cafes-texto-um">Inserir o primeiro parágrafo</p>
+    <p class="cafes-texto-dois">Inserir o segundo parágrafo</p>
+    </div>
+<img src="cafes.jpeg" alt=""><img src="portrait-two-identical-siamese-cats_158595-5728.webp" alt="">
+</section section class="gatos">
+<h2 class="gatos-titulo">quais sao nossos gatos </h2>
+    
 </body>
 </html>
